feat: initialized Category feature development